// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`widgets infobar utils displayValue() should return a comma-separated list of rendered values because passed data is an array 1`] = `
Array [
  <span>
    123
  </span>,
  <span>
    , 
    test
  </span>,
  <span>
    , 
    <Badge
      type="success"
    >
      True
    </Badge>
  </span>,
]
`;

exports[`widgets infobar utils displayValue() should return a danger badge because passed data is a \`false\` value 1`] = `
<Badge
  type="error"
>
  False
</Badge>
`;

exports[`widgets infobar utils displayValue() should return a success badge because passed data is a \`true\` value 1`] = `
<Badge
  type="success"
>
  True
</Badge>
`;

exports[`widgets infobar utils guessFieldValueFromRawData() given "-1" and "sentiment" as arguments, returns correct value 1`] = `
<React.Fragment>
  <React.Fragment>
    <strong>
      Negative
    </strong>
    <span
      className="material-icons redThumb"
    >
      thumb_down
    </span>
  </React.Fragment>
</React.Fragment>
`;

exports[`widgets infobar utils guessFieldValueFromRawData() given "0" and "sentiment" as arguments, returns correct value 1`] = `
<React.Fragment>
  <React.Fragment>
    <strong>
      Inconclusive
    </strong>
  </React.Fragment>
</React.Fragment>
`;

exports[`widgets infobar utils guessFieldValueFromRawData() given "1" and "percent" as arguments, returns correct value 1`] = `"1%"`;

exports[`widgets infobar utils guessFieldValueFromRawData() given "1" and "points" as arguments, returns correct value 1`] = `
<Badge>
  1
</Badge>
`;

exports[`widgets infobar utils guessFieldValueFromRawData() given "1" and "rating" as arguments, returns correct value 1`] = `
<React.Fragment>
  <b>
    1
  </b>
  <span
    className="starRatingWrapper"
  >
    <ReactStars
      a11y={true}
      activeColor="#FDAB40"
      char="★"
      color="#E8EBEF"
      count={5}
      edit={false}
      emptyIcon={
        <span
          className="material-icons"
        >
          star
        </span>
      }
      filledIcon={
        <span
          className="material-icons"
        >
          star
        </span>
      }
      half={false}
      halfIcon={
        <span
          className="material-icons"
        >
          star_half
        </span>
      }
      isHalf={true}
      onChange={[Function]}
      size={15}
      value={1}
    />
  </span>
</React.Fragment>
`;

exports[`widgets infobar utils guessFieldValueFromRawData() given "1" and "sentiment" as arguments, returns correct value 1`] = `
<React.Fragment>
  <React.Fragment>
    <strong>
      Positive
    </strong>
    <span
      className="material-icons greenThumb"
    >
      thumb_up
    </span>
  </React.Fragment>
</React.Fragment>
`;

exports[`widgets infobar utils guessFieldValueFromRawData() given "hello" and "percent" as arguments, returns default value 1`] = `"hello"`;

exports[`widgets infobar utils guessFieldValueFromRawData() given "hello" and "points" as arguments, returns default value 1`] = `"hello"`;

exports[`widgets infobar utils guessFieldValueFromRawData() given "hello" and "rating" as arguments, returns default value 1`] = `"hello"`;

exports[`widgets infobar utils guessFieldValueFromRawData() given "hello" and "sentiment" as arguments, returns default value 1`] = `"hello"`;

exports[`widgets infobar utils guessFieldValueFromRawData() given -1 and "sentiment" as arguments, returns correct value 1`] = `
<React.Fragment>
  <React.Fragment>
    <strong>
      Negative
    </strong>
    <span
      className="material-icons redThumb"
    >
      thumb_down
    </span>
  </React.Fragment>
</React.Fragment>
`;

exports[`widgets infobar utils guessFieldValueFromRawData() given 0 and "sentiment" as arguments, returns correct value 1`] = `
<React.Fragment>
  <React.Fragment>
    <strong>
      Inconclusive
    </strong>
  </React.Fragment>
</React.Fragment>
`;

exports[`widgets infobar utils guessFieldValueFromRawData() given 1 and "percent" as arguments, returns correct value 1`] = `"1%"`;

exports[`widgets infobar utils guessFieldValueFromRawData() given 1 and "points" as arguments, returns correct value 1`] = `
<Badge>
  1
</Badge>
`;

exports[`widgets infobar utils guessFieldValueFromRawData() given 1 and "rating" as arguments, returns correct value 1`] = `
<React.Fragment>
  <b>
    1
  </b>
  <span
    className="starRatingWrapper"
  >
    <ReactStars
      a11y={true}
      activeColor="#FDAB40"
      char="★"
      color="#E8EBEF"
      count={5}
      edit={false}
      emptyIcon={
        <span
          className="material-icons"
        >
          star
        </span>
      }
      filledIcon={
        <span
          className="material-icons"
        >
          star
        </span>
      }
      half={false}
      halfIcon={
        <span
          className="material-icons"
        >
          star_half
        </span>
      }
      isHalf={true}
      onChange={[Function]}
      size={15}
      value={1}
    />
  </span>
</React.Fragment>
`;

exports[`widgets infobar utils guessFieldValueFromRawData() given 1 and "sentiment" as arguments, returns correct value 1`] = `
<React.Fragment>
  <React.Fragment>
    <strong>
      Positive
    </strong>
    <span
      className="material-icons greenThumb"
    >
      thumb_up
    </span>
  </React.Fragment>
</React.Fragment>
`;

exports[`widgets infobar utils guessFieldValueFromRawData() given 5 and "rating" as arguments, returns correct value 1`] = `
<React.Fragment>
  <b>
    5
  </b>
  <span
    className="starRatingWrapper"
  >
    <ReactStars
      a11y={true}
      activeColor="#FDAB40"
      char="★"
      color="#E8EBEF"
      count={5}
      edit={false}
      emptyIcon={
        <span
          className="material-icons"
        >
          star
        </span>
      }
      filledIcon={
        <span
          className="material-icons"
        >
          star
        </span>
      }
      half={false}
      halfIcon={
        <span
          className="material-icons"
        >
          star_half
        </span>
      }
      isHalf={true}
      onChange={[Function]}
      size={15}
      value={5}
    />
  </span>
</React.Fragment>
`;

exports[`widgets infobar utils guessFieldValueFromRawData() given 555 and "percent" as arguments, returns correct value 1`] = `"555%"`;

exports[`widgets infobar utils guessFieldValueFromRawData() given 555 and "points" as arguments, returns correct value 1`] = `
<Badge>
  555
</Badge>
`;

exports[`widgets infobar utils guessFieldValueFromRawData() should return a datetime label because passed type is \`date\` 1`] = `
<DatetimeLabel
  dateTime="foo"
/>
`;

exports[`widgets infobar utils guessFieldValueFromRawData() should return a link because passed type is \`email\` and passed data is an email address 1`] = `
<a
  href="mailto:developers@gorgias.io"
  rel="noopener noreferrer"
  target="_blank"
>
  developers@gorgias.io
</a>
`;

exports[`widgets infobar utils guessFieldValueFromRawData() should return a link because passed type is \`url\` and passed data is an url 1`] = `
<a
  href="https://gorgias.io"
  rel="noopener noreferrer"
  target="_blank"
>
  https://gorgias.io
</a>
`;
